--- a/.temp/style.styl
+++ b/.temp/style.styl
@@ -1,5 +1,5 @@
 // Theme's Styles
-@import("E:/document/node_modules/@vuepress/theme-default/styles/index.styl")
+@import("C:/1/Git/document/node_modules/@vuepress/theme-default/styles/index.styl")
 
 // User's Styles
 // null
